created smartcontract lottery scaffold

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "solidity.compileUsingRemoteVersion": "v0.8.7+commit.e28d00a7"
+  "solidity.compileUsingRemoteVersion": "v0.8.7+commit.e28d00a7",
+  "cSpell.words": ["Chainlink", "nomiclabs", "solhint"]
 }
