--- a/hardhat-smartcontract-lottery/.prettierrc
+++ b/hardhat-smartcontract-lottery/.prettierrc
@@ -3,5 +3,19 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "overrides": [
+    {
+      "files": "*.sol",
+      "options": {
+        "printWidth": 80,
+        "semi": true,
+        "tabWidth": 2,
+        "useTabs": false,
+        "singleQuote": false,
+        "bracketSpacing": false,
+        "explicitTypes": "always"
+      }
+    }
+  ]
 }
