--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "solidity.compileUsingRemoteVersion": "v0.8.7+commit.e28d00a7",
-  "cSpell.words": ["Chainlink", "nomiclabs", "solhint"],
+  "cSpell.words": ["Chainlink", "checkupkeep", "nomiclabs", "solhint"],
   "[solidity]": {
     "editor.defaultFormatter": "NomicFoundation.hardhat-solidity"
   },
